--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11050,3 +11050,214 @@ a.text-dark:focus {
 .search_container ::-webkit-input-placeholder {
   color: #707070;
 }
+
+.welcome{
+font-family: "Hiragino Kaku Gothic ProN";
+font-weight: normal;
+font-size: 56px;
+text-align: left;
+color: #707070;
+text-align: center;
+}
+
+.all-login{
+width: 872px;
+height: 761px;
+border-radius: 68px;
+}
+
+.login-name{
+font-family: "Hiragino Kaku Gothic ProN";
+font-weight: normal;
+font-size: 50px;
+text-align: left;
+color: #fff;
+text-align: center;
+}
+
+.login-area{
+width: 872px;
+height: 106px;
+border-radius: 52px;
+background: #e0b6b7;
+border: 1px solid #707070;
+}
+
+.login-asset{
+display: flex;
+flex-direction: column;
+}
+
+.email-label{
+font-family: "Hiragino Kaku Gothic ProN";
+font-weight: normal;
+font-size: 50px;
+text-align: left;
+color: #707070;
+white-space: nowrap;
+}
+
+.email-form{
+width: 698px;
+height: 90px;
+border-radius: 45px;
+background: #fff;
+border: 1px solid #707070;
+}
+
+.pass-label{
+font-family: "Hiragino Kaku Gothic ProN";
+font-weight: normal;
+font-size: 50px;
+text-align: left;
+color: #707070;
+white-space: nowrap;
+}
+
+.pass-form{
+width: 698px;
+height: 90px;
+border-radius: 45px;
+background: #fff;
+border: 1px solid #707070;
+}
+
+.login-button{
+font-family: "Hiragino Kaku Gothic ProN";
+font-weight: normal;
+font-size: 37px;
+text-align: left;
+color: #fff5f5;
+width: 233px;
+height: 92px;
+border-radius: 46px;
+background: #e0b6b7;
+border: 1px solid #707070;
+text-align: center;
+margin: 20px;
+}
+
+.pass-forget{
+font-family: "Hiragino Kaku Gothic ProN";
+font-weight: normal;
+font-size: 25px;
+text-align: right;
+color: #e0b6b7;
+white-space: nowrap;
+margin: 20px;
+}
+
+.pass-forget:hover{
+text-decoration: none;
+}
+
+.login-click{
+display: flex;
+align-items: center;
+}
+
+.register-all{
+  width: 922px;
+  height: 790px;
+  border-radius: 63px;
+}
+
+.register-label{
+  width: 922px;
+  height: 104px;
+  border-radius: 52px;
+  background: #e0b6b7;
+  border: 1px solid #707070;
+}
+
+.register-name{
+  font-family: "Hiragino Kaku Gothic ProN";
+  font-weight: normal;
+  font-size: 50px;
+  text-align: left;
+  color: #fff;
+  text-align: center;
+}
+
+.register-index{
+  display: flex;
+  flex-direction: column;
+}
+
+.name-label{
+  font-family: "Hiragino Kaku Gothic ProN";
+  font-weight: normal;
+  font-size: 31px;
+  text-align: left;
+  color: #707070;
+}
+
+.name-form{
+  width: 698px;
+  height: 56px;
+  border-radius: 28px;
+  background: #fff;
+  border: 1px solid #707070;
+}
+
+.email-label{
+  font-family: "Hiragino Kaku Gothic ProN";
+  font-weight: normal;
+  font-size: 31px;
+  text-align: left;
+  color: #707070;
+}
+
+.email-form{
+  width: 698px;
+  height: 56px;
+  border-radius: 28px;
+  background: #fff;
+  border: 1px solid #707070;
+}
+
+.pass-label{
+  font-family: "Hiragino Kaku Gothic ProN";
+  font-weight: normal;
+  font-size: 31px;
+  text-align: left;
+  color: #707070;
+}
+
+.pass-form{
+  width: 698px;
+  height: 56px;
+  border-radius: 28px;
+  background: #fff;
+  border: 1px solid #707070;
+}
+
+.check-label{
+  font-family: "Hiragino Kaku Gothic ProN";
+  font-weight: normal;
+  font-size: 31px;
+  text-align: left;
+  color: #707070;
+}
+
+.check-form{
+  width: 698px;
+  height: 56px;
+  border-radius: 28px;
+  background: #fff;
+  border: 1px solid #707070;
+}
+
+.register-button{
+  width: 236px;
+  height: 81px;
+  border-radius: 40.5px;
+  background: #e0b6b7;
+  border: 1px solid #707070;
+  font-family: "Hiragino Kaku Gothic ProN";
+  font-weight: normal;
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+  margin: 20px;
+}
